[package]
name = "residua-zigzag"
version = "0.1.0"
authors = ["Sean C. Roach <me@seancroach.dev>"]
edition = "2018"

description = "A library for converting between signed and unsigned integers using zigzag encoding and decoding."
repository = "https://github.com/residua/zigzag"
license = "MIT"

categories = ["encoding"]

[lib]
name = "zigzag"
